# r-signer

./: .dockerignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  README.md  bacon.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  release.yml
crates/bls-keystore/: Cargo.toml
crates/bls-keystore/src/: keystore.rs  lib.rs  password_util.rs  tests.rs
crates/datastructures/: Cargo.toml
crates/datastructures/src/: lib.rs  tests.rs
crates/r-signer/: Cargo.toml
crates/r-signer/src/: main.rs
crates/signing-root-util/: Cargo.toml  README.md
crates/signing-root-util/src/: internal.rs  lib.rs  tests.rs  types.rs
crates/specs/: Cargo.toml
crates/specs/configs/mainnet/: config.yaml
crates/specs/configs/minimal/: config.yaml
crates/specs/presets/mainnet/: capella.yaml
crates/specs/presets/minimal/: capella.yaml  phase0.yaml
crates/specs/src/: lib.rs  tests.rs
crates/specs/tests/: custom_network_config.yaml
