[workspace]
members = ["crates/*"]

[workspace.package]
rust-version = "1.67"
edition = "2021"
description = "Remote Signer for Ethereum Consensus clients"
repository = "https://github.com/usmansnetwork/r-signer"
license = "Apache-2.0"
authors = ["Usmans Network team"]

[workspace.dependencies]
# local crates
# protection-db = { "./crates/protection-db", version = "0.0.0" }

# non-local crates ... 