[workspace]
members = ["crates/*"]

[workspace.package]
rust-version = "1.67"
edition = "2021"
description = "Remote Signer for Ethereum Consensus clients"
repository = "https://github.com/usmansnetwork/r-signer"
license = "Apache-2.0"
authors = ["Usmans Network team"]

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[profile.dev.package]
# These speed up local tests.
#rowan.opt-level = 3
#rustc-hash.opt-level = 3
#smol_str.opt-level = 3
#text-size.opt-level = 3

[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 0

[workspace.dependencies]
# local crates
bls-keystore = { path = "./crates/bls-keystore", version = "0.0.0" }

# non-local crates ... 