[package]
name = "bls-keystore"
version = "0.0.0"


authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
unicode-normalization = "0.1.22"
hex = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0"
scrypt = { version = "0.11.0", default-features = false}
