[package]
name = "bls-keystore"
version = "0.0.0"


authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
unicode-normalization = "0.1.24"
hex = {version="0.4", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0"
scrypt = { version = "0.11.0", default-features = false}
pbkdf2 = { version = "0.12", features = ["simple", "parallel"]}
rand_core = {version = "0.6", features = ["std"]}
sha2 = {version = "0.10", default-features = false}
ctr = "0.9"
aes = "0.8"