[package]
name = "datastructures"
version = "0.0.0"


authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
ssz-rs = {git = "https://github.com/ralexstokes/ssz-rs"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0"
hex-literal = "0.3.4"
