[package]
name = "r-signer"
version = "0.0.0"
description = "Remote Signer for Ethereum Consensus clients"
repository = "https://github.com/usmansnetwork/r-signer"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
