[package]
name = "signing-root-util"
version = "0.0.0"


authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
ssz-rs = {git = "https://github.com/ralexstokes/ssz-rs"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
hex-literal = "0.3.4"
ethereum-types = "0.14.1"
eth2_serde_utils = "0.1.0"

# local crate dependencies
specs.workspace = true