[package]
name = "signing-root-util"
version = "0.0.0"


authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
ssz_rs = "0.8.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
hex-literal = "0.3.4"
ethereum-types = "0.14"
primitive-types = {version="0.12", features=["default", "serde"]} # parity
fixed-hash = "0.8" #parity
impl-serde = "0.4.0" #parity
eth2_serde_utils = {git = "https://github.com/sigp/lighthouse", package="eth2_serde_utils"}
# local crate dependencies
specs.workspace = true
