[package]
name = "specs"
version = "0.0.0"


authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
figment = { version = "0.10", features = ["yaml"] }
phf = { version = "0.11", features = ["macros"] }